@@ -139,6 +139,9 @@ BUGFIXES:
   ZOOKEEPER-598. LearnerHandler is misspelt in the thread's constructor 
   (Henry Robinson via fpj)
 
+  ZOOKEEPER-597. ASyncHammerTest is failing intermittently on hudson trunk (take 2)
+  (breed)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
